Don't let current width affect preferred width on shrink-to-fit containers

When shrinking-to-fit a container don't let the current width affect its
preferred widths. This will happen if we let percent margins on child inlines
calculate themselves against the block's current calculated width. To avoid
this reset the container's width to zero so that percent margins are ignored
in the preferred width calculation.

BUG=598711

Review-Url: https://codereview.chromium.org/2802413002
Cr-Commit-Position: refs/heads/master@{#463378}

Former-commit-id: 037075a489638e0c6d8adf4a25184949efd36c1d